Fix z-index for autocomplete

--- a/CampusMap2010/Content/src/scss/wsu_maps.search.scss
+++ b/CampusMap2010/Content/src/scss/wsu_maps.search.scss
@@ -8,7 +8,7 @@
 	
 	//padding-right: 20px;
 	width: 175px;
-	z-index: 999;
+	z-index: 99999;
 	border: 1px solid $color_french_gray_approx;
 	//Instead of the line below you could use @includebox-shadow($shadow-1, $shadow-2, $shadow-3, $shadow-4, $shadow-5, $shadow-6, $shadow-7, $shadow-8, $shadow-9, $shadow-10)
 	box-shadow: 0 5px 10px -5px $black_55;
